# order-service

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  generate-specs.yml
alembic/: env.py
alembic/versions/: 001_create_guest_session_and_shipping_method_tables.py  002_seed_shipping_methods.py  003_create_admin_users_table.py  004_seed_admin_users.py  005_create_orders_and_order_lines_tables.py
docs/api/: openapi.json
docs/schema/: entities.md
scripts/: generate_specs.py
src/: config.py  dependencies.py  main.py
src/api/: health.py  router.py
src/api/v1/: auth.py  checkout.py  orders.py
src/clients/: inventory_client.py  notification_client.py  stripe_client.py
src/models/: __init__.py  admin_user.py  guest_session.py  order.py  shipping_method.py
src/repositories/: __init__.py  admin_user_repo.py  guest_session_repo.py  order_repo.py  shipping_method_repo.py
src/schemas/: __init__.py  auth.py  common.py  error.py  guest_session.py  order.py  shipping_method.py
src/services/: __init__.py  auth_service.py  guest_session_service.py  jwt_service.py  notification_sync.py  order_saga.py  password_service.py  reference_generator.py  totp_service.py  validation.py
tests/: conftest.py
tests/integration/: test_auth.py  test_guest_sessions.py  test_health.py  test_notification.py  test_observability.py  test_order_detail.py  test_order_list.py  test_order_placement.py  test_payment_failure.py  test_shipping_methods.py  test_stock_conflict.py  test_validation.py
